--- a/app/signupform.css
+++ b/app/signupform.css
@@ -69,7 +69,7 @@
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
     margin-top: 1rem;
     border-radius: 0.375rem;
-    padding: 0.625rem 0.5rem;
+    padding: 0.625rem 0.7rem 0.625rem 0.7rem ;
     width: 100%;
     font-family: 'manrope';
     font-weight: 500;
