--- a/app/signupform.css
+++ b/app/signupform.css
@@ -16,7 +16,7 @@
   }
   
   .formkit-input {
-    width: 100%;
+    width: 20rem;
     padding: 10px;
     border: 1px solid #e2e8f0;
     border-radius: 4px;
